--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,15 @@
 body {
   color: rgb(var(--foreground-rgb));
 }
+.btn-cta {
+  box-shadow: 0px -5px 6px 0px rgba(0, 0, 0, 0.12) inset;
+}
+.btn-cta:hover {
+  box-shadow: 0px 5px 6px 0px rgba(0, 0, 0, 0.12) inset;
+}
+.btn-contact {
+  box-shadow: 0px -2px 6px 0px rgba(0, 0, 0, 0.12) inset;
+}
+.btn-contact:hover {
+  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.12) inset;
+}
