--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: black;
 }
 .btn-cta {
   box-shadow: 0px -5px 6px 0px rgba(0, 0, 0, 0.12) inset;
